// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`tooltip > should render correctly with component in content prop 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="_r_8_"
      aria-describedby="_r_8_"
      class="styles__pjfil59"
      tabindex="-1"
    >
      Children
    </div>
  </div>
</DocumentFragment>
`;

exports[`tooltip > should render correctly with placement > should renders tooltip with placement bottom 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="_r_12_"
      aria-describedby="_r_12_"
      class="styles__pjfil59"
      tabindex="-1"
    >
      <p
        data-testid="children"
      >
        Children
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tooltip > should render correctly with placement > should renders tooltip with placement left 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="_r_k_"
      aria-describedby="_r_k_"
      class="styles__pjfil59"
      tabindex="-1"
    >
      <p
        data-testid="children"
      >
        Children
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tooltip > should render correctly with placement > should renders tooltip with placement right 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="_r_r_"
      aria-describedby="_r_r_"
      class="styles__pjfil59"
      tabindex="-1"
    >
      <p
        data-testid="children"
      >
        Children
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tooltip > should render correctly with placement > should renders tooltip with placement top 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="_r_d_"
      aria-describedby="_r_d_"
      class="styles__pjfil59"
      tabindex="-1"
    >
      <p
        data-testid="children"
      >
        Children
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tooltip > should render correctly with required props 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="_r_0_"
      aria-describedby="_r_0_"
      class="styles__pjfil59"
      tabindex="-1"
    >
      Children
    </div>
  </div>
</DocumentFragment>
`;

exports[`tooltip > should render correctly with required props and visible 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="_r_1_"
      aria-describedby="_r_1_"
      class="styles__pjfil59"
      tabindex="-1"
    >
      Children
    </div>
  </div>
</DocumentFragment>
`;

exports[`tooltip > should render correctly with sentiment > should renders tooltip with placement neutral 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="_r_19_"
      aria-describedby="_r_19_"
      class="styles__pjfil59"
      tabindex="-1"
    >
      <p
        data-testid="children"
      >
        Children
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tooltip > should render correctly with sentiment > should renders tooltip with placement primary 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="_r_1g_"
      aria-describedby="_r_1g_"
      class="styles__pjfil59"
      tabindex="-1"
    >
      <p
        data-testid="children"
      >
        Children
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tooltip > should render correctly with sizes > should renders tooltip with placement large 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="_r_25_"
      aria-describedby="_r_25_"
      class="styles__pjfil59"
      tabindex="-1"
    >
      <p
        data-testid="children"
      >
        Children
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tooltip > should render correctly with sizes > should renders tooltip with placement medium 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="_r_1u_"
      aria-describedby="_r_1u_"
      class="styles__pjfil59"
      tabindex="-1"
    >
      <p
        data-testid="children"
      >
        Children
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tooltip > should render correctly with sizes > should renders tooltip with placement small 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="_r_1n_"
      aria-describedby="_r_1n_"
      class="styles__pjfil59"
      tabindex="-1"
    >
      <p
        data-testid="children"
      >
        Children
      </p>
    </div>
  </div>
</DocumentFragment>
`;
